2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/27_ConvBoolFloat.deca
// Description:
//    Programme : conv float boolean 
// Resultats:
//      Programme correcte syntaxiquement et faux contextuellement 
//
// Historique:
//    cree le 18/01/2024
{
    boolean f = true;
    float y = (float)(f);
}